Add basic LoRa configuration and response

--- a/ModbusIPLoRaNode/platformio.ini
+++ b/ModbusIPLoRaNode/platformio.ini
@@ -10,5 +10,6 @@
 
 [env:ttgo-lora32-v2]
 platform = espressif32
-board = ttgo-lora32-v2
+board = ttgo-lora32-v1
 framework = arduino
+lib_deps = mikem/RadioHead@^1.113
