--- a/ModbusIPLoRaNode/platformio.ini
+++ b/ModbusIPLoRaNode/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
-lib_deps = mikem/RadioHead@^1.113
+lib_deps = 
+	mikem/RadioHead@^1.113
+	arduino-libraries/ArduinoModbus@^1.0.2
